feat(nota-corte): cadastro e média de notas por curso
fix(login, newsletter, instituicao): ajustes de autenticação e DT